Huge commit, sorry - implement auth and refresh_token, start nominatim api for location- TODO continue implmeneting location API for user creation
